--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -22,6 +22,9 @@
     "@blued-core/statsd-client": "^0.0.7",
     "@blued-core/winston-logger": "^0.0.7",
     "typescript": "^3.4.5"
+  },
+  "peerDependencies": {
+    "typescript": "^3.4.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
