--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   "dependencies": {
     "@blued-core/cache": "^1.0.2",
     "@blued-core/exception-report-client": "^0.0.2",
-    "@blued-core/http-server-base": "^0.0.4",
+    "@blued-core/http-server-base": "0.0.5",
     "@blued-core/normal-conf": "^0.0.2",
     "@blued-core/performance-client": "^0.0.1",
     "@blued-core/winston-logger": "^0.0.7",
