--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "@blued-core/exception-report-client": "^0.0.2",
     "@blued-core/http-server-base": "^0.2.0",
     "@blued-core/normal-conf": "^0.0.3",
-    "@blued-core/performance-client": "^0.0.1",
+    "@blued-core/performance-client": "0.0.2",
     "@blued-core/winston-logger": "^0.0.9",
     "typescript": "^3.5.2"
   },
@@ -27,14 +27,14 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
+    "@commitlint/cli": "^8.3.3",
     "@commitlint/config-conventional": "^8.0.0",
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.10",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "chai": "^4.2.0",
-    "commitizen": "^3.1.1",
+    "commitizen": "^4.0.3",
     "eslint": "^6.0.1",
     "eslint-config-blued-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.18.0",
