--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -17,10 +17,10 @@
   "dependencies": {
     "@blued-core/cache": "^1.0.3",
     "@blued-core/exception-report-client": "^0.0.2",
-    "@blued-core/http-server-base": "^0.2.0",
+    "@blued-core/http-server-base": "^0.2.1",
     "@blued-core/normal-conf": "^0.0.3",
     "@blued-core/performance-client": "0.0.2",
-    "@blued-core/winston-logger": "^0.0.9",
+    "@blued-core/winston-logger": "0.0.10",
     "typescript": "^3.5.2"
   },
   "peerDependencies": {
