--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "@blued-core/exception-report-client": "^0.0.2",
     "@blued-core/http-server-base": "^0.2.2",
     "@blued-core/normal-conf": "^0.0.3",
-    "@blued-core/performance-client": "0.0.2",
+    "@blued-core/performance-client": "^0.0.4",
     "@blued-core/winston-logger": "0.0.10",
     "typescript": "^3.5.2"
   },
