--- a/packages/http-server-base/package.json
+++ b/packages/http-server-base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server-base",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -16,15 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@blued-core/client-intl": "0.0.2",
-    "@blued-core/logger-intl": "0.0.13",
+    "@blued-core/client-intl": "^0.1.0",
+    "@blued-core/logger-intl": "^0.1.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.7.7",
-    "typescript": "^3.4.4"
+    "routing-controllers": "^0.7.7"
   },
   "peerDependencies": {
     "typescript": "^3.4.4"
@@ -46,7 +45,8 @@
     "eslint-plugin-import": "^2.17.2",
     "husky": "^1.3.1",
     "mocha": "^6.1.4",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "typescript": "^3.9.6"
   },
   "husky": {
     "hooks": {
