--- a/packages/http-server/package.json
+++ b/packages/http-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blued-core/http-server",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -15,13 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@blued-core/cache": "^1.0.3",
-    "@blued-core/exception-report-client": "^0.0.2",
-    "@blued-core/http-server-base": "^0.2.2",
-    "@blued-core/normal-conf": "^0.0.3",
-    "@blued-core/performance-client": "^0.0.4",
-    "@blued-core/winston-logger": "0.0.10",
-    "typescript": "^3.5.2"
+    "@blued-core/cache": "^1.0.6",
+    "@blued-core/exception-report-client": "0.0.8",
+    "@blued-core/http-server-base": "^0.2.3",
+    "@blued-core/normal-conf": "^0.1.1",
+    "@blued-core/performance-client": "0.0.5",
+    "@blued-core/winston-logger": "^0.1.0"
   },
   "peerDependencies": {
     "typescript": "^3.5.2"
@@ -40,7 +39,8 @@
     "eslint-plugin-import": "^2.18.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.9.6"
   },
   "husky": {
     "hooks": {
